--- a/css/divCells.css
+++ b/css/divCells.css
@@ -1,25 +1,34 @@
 .divLine{
     display: table;
-    height: 50px;
-    width: 450px;
+    height: 60px;
+    width: 540px;
 }
 
-.divCell{
+.divCell, .divCell:hover, .divCell:active{
     display: table-cell;
     text-align: center;
+    vertical-align: middle;
     font-size: 32px;
     font-family: 'Roboto', sans-serif;
     width: 10px;
-    background-color: #cccccc;
+    height: 10px;
+    background-color: #f0f0f0;
+
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(37, 37, 37);
+    
+    min-width: 60px;
+    min-height: 60px;
 }
 
 .divCell:hover{
-    display: table-cell;
-    text-align: center;
-    font-size: 32px;
-    font-family: 'Roboto', sans-serif;
-    width: 10px;
     background-color: #ffff0f;
+    
+}
+
+.divCell:active{
+    background-color: #a1a18b;
 }
 
 .Header{
